--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+cffi==1.7.0
+cryptography==1.4
+cycler==0.10.0
+enum34==1.1.6
+idna==2.1
+ipaddress==1.0.16
+matplotlib==1.5.1
+ndg-httpsclient==0.4.2
 numpy==1.11.1
 pandas==0.18.1
+pyasn1==0.1.9
+pycparser==2.14
+pyOpenSSL==16.0.0
+pyparsing==2.1.5
 python-dateutil==2.5.3
 pytz==2016.6.1
+requests==2.10.0
+scikit-learn==0.17.1
 scipy==0.18.0
 six==1.10.0
+xlrd==1.0.0
